@@ -2822,6 +2822,8 @@ ENUMX
 ENUMX
   BFD_RELOC_ARM_T32_IMMEDIATE
 ENUMX
+  BFD_RELOC_ARM_T32_ADD_IMM
+ENUMX
   BFD_RELOC_ARM_T32_IMM12
 ENUMX
   BFD_RELOC_ARM_T32_ADD_PC12
