@@ -1,3 +1,9 @@
+2006-07-18  Paul Brook  <paul@codesourcery.com>
+
+	* bfd-in2.h: Regenerate.
+	* libbfd.h: Regenerate.
+	* reloc.c: Add BFD_RELOC_ARM_T32_ADD_IMM.
+
 2006-07-18  Nick Clifton  <nickc@redhat.com>
 
 	* elfxx-mips.c (_bfd_mips_elf_common_definition): New function.
